# sms-spam-identifier

./: .gitignore  README.md  app.py  cli.py  dataflow_graph.py  download_data.py  feature_engineering.py  graph_gen.py  model.ubj  model_trainer.py  prediction.py  predictor.py  pyproject.toml  requirements.txt  spam.csv  training.py  vectorizer.ubj
static/: styles.css
templates/: index.html  predict.html
