[project]
name = "sms-spam-identifier"
version = "0.1.0"
description = "Classifies SMS messages as spam or legitimate with an XGBoost model over TF-IDF and engineered text features."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "xgboost>=3.0.0",
    "scikit-learn>=1.7.0",
    "pandas>=2.3.0",
    "numpy>=2.3.0",
]

[tool.uv]
package = false
